src/test/deca/context/invalid/Obj/decl-field-inexistant.deca
// Description:
//    Utilisation d'un champ qui n'a pas été défini
//
// Résultat:
//variable non definie
//
class A{
    void field(){
        champ = 0;
    }
}
{}